# targetviz

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: workflow.yml
samples/: cal_housing.html  cars.html  titanic.html
targetviz/: __init__.py  config.py  config_default.yaml  main.py
targetviz/templates/: base.html  extra_col.html
tests/: test_classification.py  test_ptools.py  test_speed.py
